--- a/roles/mysql-role/tasks/main.yml
+++ b/roles/mysql-role/tasks/main.yml
@@ -28,14 +28,14 @@
 
 - name: Create a new database with name 'bobdata'
   mysql_db:
-    name: "{{ db_name }}"
+    name: newdb
     state: present
 
 #- name: Create database user with name 'bob' and password '12345' with all database privileges
 - mysql_user:
     name: "{{ db_username }}"
     password: "{{ db_password }}"
-    priv: '*.*:ALL,GRANT'
+    priv: 'newdb.*:ALL'
     state: present
 
 #- name: Create database user with name 'bob' and password '12345' with all database privileges
