--- a/roles/mysql-role/defaults/main.yml
+++ b/roles/mysql-role/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
 #root_username: roo
 mysql_root_pass: mypassword
-db_username: root
+db_username: raj
 db_password: welcome
 db_name: firstdb
+
+
+
