--- a/roles/mysql-role/tasks/main.yml
+++ b/roles/mysql-role/tasks/main.yml
@@ -15,7 +15,7 @@
   action: service name=mysql state=started
 
 - name: Update MySQL root password for all root accounts
-  mysql_user: name=raja host={{ item }} password={{ mysql_root_pass }} state=present
+  mysql_user: name=root host={{ item }} password={{ mysql_root_pass }} state=present
   with_items:
      - "{{ ansible_hostname }}"
      - 127.0.0.1
