--- a/roles/mongodb-install/defaults/main.yml
+++ b/roles/mongodb-install/defaults/main.yml
@@ -1,4 +1,4 @@
-mongodb_admin_user: netops
-mongodb_admin_password: welcome
-mongodb_user: raja
-mongodb_password: welcome
+#mongodb_admin_user: netops
+#mongodb_admin_password: welcome
+#mongodb_user: raja
+#mongodb_password: welcome
